# InTown

./: .gitignore  CLAUDE.md  FINAL_PRD.md  LEARNINGS.md  PHASE1_PLAN.md  PRD.md  README.md  UI_UX_RESEARCH.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: README.md  settings.json
Frontend_Website/: README.md  index.html  package-lock.json
backend/: package.json
backend/workers/pipeline/: README.md  VERIFY.md  pyproject.toml
backend/workers/pipeline/pipeline/: __init__.py  main.py
backend/workers/pipeline/pipeline/brain/: README.md  __init__.py  resolution.py
backend/workers/pipeline/pipeline/ingestion/: __init__.py  categories.py  commons.py  geoapify.py  http.py  models.py  orchestrator.py  osm.py  repository.py  runtime.py  wikimedia.py
backend/workers/pipeline/tests/: __init__.py  test_structured_ingestion.py
backend/workers/pipeline/tests/fixtures/: commons_photos.json  geoapify_places.json  geoapify_search.json  overpass_porto.json  wikidata_entities.json  wikipedia_extracts.json
backend/workers/solver/: README.md  pyproject.toml
backend/workers/solver/solver/: __init__.py  auditor.py  feasibility.py  greedy.py  main.py  matrix.py  models.py  ortools_engine.py  policy.py  variants.py
contracts/: design-tokens.json  package.json  tsconfig.json
docs/: contract-change-P01-pin-ramp.md
frontend/: .env.example  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
phases/: INDEX.md  P00-foundations.md  P01-design-system-and-app-shell.md  P21-narration.md  (+31 more)
(+494 files in other folders)
