[project]
name = "intown-pipeline"
version = "0.0.0"
description = "InTown City Brain build pipeline (§5.2): POI ingestion, research, enrichment workers."
requires-python = ">=3.12"
dependencies = [
  "httpx[http2]>=0.28.1,<1",
  "psycopg[binary,pool]>=3.2.6,<4",
]

[project.scripts]
intown-pipeline = "pipeline.main:main"

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
