[project]
name = "intown-solver"
version = "0.0.0"
description = "InTown itinerary solver (§5.7, §16 solver): OR-Tools routing service + CP-SAT auditor."
requires-python = ">=3.12"
dependencies = [
  "ortools>=9.10",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solver"]
